# pytest-mockservers

./: .flake8  .gitignore  .isort.cfg  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: default.yml
pytest_mockservers/: __init__.py  http_server.py  udp_server.py
tests/: test_http_server.py  test_upd_server.py
