[tool.black]
line-length = 88
target-version = ["py36", "py37", "py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.vscode
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
combine_as_imports = true
default_section = "LOCALFOLDER"
force_grid_wrap = false
include_trailing_comma = true
known_first_party = "pytest_mockservers"
known_standard_library = ""
known_third_party = "aiohttp,pytest"
line_length = 88
multi_line_output = 3
not_skip = "__init__.py"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip = ".eggs,.tox,.venv,venv"

[tool.poetry]
name = "pytest-mockservers"
version = "0.5.0"
description = "A set of fixtures to test your requests to HTTP/UDP servers"
authors = [
    "Nikita Grishko <gr1n@protonmail.com>"
]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/Gr1N/pytest-mockservers"
repository = "https://github.com/Gr1N/pytest-mockservers"

keywords = ["asyncio", "pytest", "plugin", "http", "upd", "mock"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"

aiohttp = ">=3.0.0"
pytest = ">=3.0.0"
pytest-asyncio = ">=0.9.0"

[tool.poetry.dev-dependencies]
black = { version = ">=18.9b0", allow-prereleases = true }
flake8 = ">=3.7.6"
flake8-bugbear = ">=18.8.0"
isort = { version = ">=4.3.5", extras = ["pyproject"] }
mypy = ">=0.670"
pytest = ">=3.0.0"
tox = ">=3.14.2"

[tool.poetry.plugins."pytest11"]
http_server = "pytest_mockservers.http_server"
udp_server = "pytest_mockservers.udp_server"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
